--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "antd": "^4.3.4",
     "axios": "^0.19.2",
     "craco-less": "^1.17.0",
+    "formik": "^2.1.4",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^5.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
@@ -28,15 +30,11 @@
     "build": "craco build",
     "test": "craco test",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier:write": "npx prettier --write **/*.{js,jsx,ts,tsx,json} && npx prettier --write *.{js,jsx,ts,tsx,json}"
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
