--- a/.github/workflows/nodegroup_branch_plast.yml
+++ b/.github/workflows/nodegroup_branch_plast.yml
@@ -22,9 +22,9 @@ jobs:
 
     - name: npm install, build, and test
       run: |
-        npm install
-        npm run build --if-present
-        npm run test --if-present
+        yarn install
+        yarn build
+        yarn test
 
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v1
