--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.3.4",
+    "antd-mask-input": "^0.1.13",
     "axios": "^0.19.2",
     "craco-less": "^1.17.0",
+    "formik": "^2.1.4",
+    "from-antd-datepicker": "^0.2.10",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
