--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@types/jest": "^24.0.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.3.4",
     "axios": "^0.19.2",
@@ -21,8 +21,10 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-chat-window": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.7.2",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2",
