--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-chat-window": "^1.2.1",
+    "react-click-away-listener": "^1.3.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.7.2",
     "react-input-mask": "^2.0.4",
     "react-messenger-customer-chat": "^0.8.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "typescript": "~3.7.2",
     "yup": "^0.29.1"
   },
