BR: add responsive to sorted event info

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-input-mask": "^2.0.4",
     "react-messenger-customer-chat": "^0.8.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "typescript": "~3.7.2",
     "yup": "^0.29.1"
   },
