--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,13 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+    - bash: |
+        # Write your commands here
+        cat > src\config.ts << EOF
+        const BASE_URL = "http://eplast-api.westeurope.cloudapp.azure.com:5000/api/";
+        export default BASE_URL;
+        EOF
+      displayName: 'Update API URL'
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
