--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
     name: eplastweb
 spec:
-    type: LoadBalancer
+    type: ClusterIP
     ports:
     - port: 80
     selector:
