Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,7 +72,7 @@ stages:
     displayName: Deploy
     pool:
       vmImage: $(vmImageName)
-    environment: 'IrynaZavushchakEPlast.eplast'
+    environment: 'EPlast.eplast'
     strategy:
       runOnce:
         deploy:
