--- a/manifests/ingress-prod.yml
+++ b/manifests/ingress-prod.yml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-production
+    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
 spec:
   tls:
   - hosts:
