--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-hook-form": "^5.7.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-input-mask": "^2.0.4",
     "react-messenger-customer-chat": "^0.8.0",
     "react-router-dom": "^5.2.0",
@@ -68,6 +69,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-input-mask": "^2.0.5",
     "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
