--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fullcalendar/core": "^5.1.0",
     "@fullcalendar/daygrid": "^5.1.0",
     "@fullcalendar/react": "^5.1.0",
+    "@microsoft/signalr": "^3.1.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
