--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-click-away-listener": "^1.3.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
-    "react-google-login": "^5.1.21",
+    "react-google-login": "^5.1.22",
+    "react-google-oauth": "^1.0.0",
     "react-hook-form": "^5.7.2",
     "react-input-mask": "^2.0.4",
     "react-messenger-customer-chat": "^0.8.0",
