--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/react-facebook-login": "^4.1.2",
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.3.4",
     "antd-mask-input": "^0.1.13",
@@ -32,6 +33,7 @@
     "react-click-away-listener": "^1.3.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.22",
     "react-google-oauth": "^1.0.0",
     "react-hook-form": "^5.7.2",
