Working process on statistics chart

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd": "^4.3.4",
     "antd-mask-input": "^0.1.13",
     "axios": "^0.19.2",
+    "bizcharts": "^4.0.15",
     "craco-less": "^1.17.0",
     "formik": "^2.1.4",
     "from-antd-datepicker": "^0.2.10",
