--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "axios": "^0.19.2",
     "bizcharts": "^4.0.15",
     "craco-less": "^1.17.0",
+    "express": "^4.17.1",
     "formik": "^2.1.4",
     "from-antd-datepicker": "^0.2.10",
     "fullcalendar": "^5.1.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.27.0",
+    "node-fetch": "^2.6.1",
     "react": "^16.13.1",
     "react-chat-window": "^1.2.1",
     "react-click-away-listener": "^1.3.0",
@@ -44,6 +46,7 @@
     "react-messenger-customer-chat": "^0.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "redis": "^3.0.2",
     "signalr": "^2.4.1",
     "typescript": "~3.7.2",
     "yup": "^0.29.1"
@@ -77,8 +80,11 @@
     ]
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/node-fetch": "^2.5.7",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-input-mask": "^2.0.5",
+    "@types/redis": "^2.8.28",
     "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "eslint-config-airbnb-typescript": "^7.2.1",
