--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-messenger-customer-chat": "^0.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-sticky": "^6.0.3",
     "signalr": "^2.4.1",
     "typescript": "~3.7.2",
     "yup": "^0.29.1"
@@ -79,6 +80,7 @@
   "devDependencies": {
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-input-mask": "^2.0.5",
+    "@types/react-sticky": "^6.0.3",
     "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "eslint-config-airbnb-typescript": "^7.2.1",
