--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-sticky": "^6.0.3",
+    "reactjs-popup": "^2.0.4",
     "signalr": "^2.4.1",
     "typescript": "~3.7.2",
     "yup": "^0.29.1"
