--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -18,8 +18,8 @@ spec:
           image: ___containerRegistry___/eplastweb
           resources:
             limits:
-              cpu: "0.2"
-              memory: "200Mi"          
+              cpu: "100m"
+              memory: "100Mi"          
           ports:
           - containerPort: 80
 
@@ -33,8 +33,8 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: eplastweb
-  minReplicas: 2
-  maxReplicas: 4
+  minReplicas: 1
+  maxReplicas: 2
   metrics:
   - type: Resource
     resource:
