--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -18,8 +18,8 @@ spec:
           image: ___containerRegistry___/eplastweb
           resources:
             limits:
-              cpu: "0.2"
-              memory: "200Mi"          
+              cpu: "100m"
+              memory: "100Mi"          
           ports:
           - containerPort: 80
 
