--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "interweave": "^12.9.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.27.0",
+    "pdfmake": "^0.2.4",
     "react": "^16.13.1",
     "react-chat-window": "^1.2.1",
     "react-click-away-listener": "^1.3.0",
@@ -81,6 +82,7 @@
     ]
   },
   "devDependencies": {
+    "@types/pdfmake": "^0.1.19",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-input-mask": "^2.0.5",
     "@types/react-sticky": "^6.0.3",
