--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-google-oauth": "^1.0.0",
     "react-hook-form": "^5.7.2",
     "react-icons": "^3.11.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-input-mask": "^2.0.4",
     "react-messenger-customer-chat": "^0.8.0",
