Added new page AnnouncementsTable

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-sticky": "^6.0.3",
+    "react-sweet-state": "^2.6.0",
     "signalr": "^2.4.1",
     "typescript": "~3.7.2",
     "yup": "^0.29.1"
