--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
@@ -30,6 +31,7 @@
     "fullcalendar": "^5.1.0",
     "interweave": "^12.9.0",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.21",
     "moment": "^2.27.0",
     "pdfmake": "^0.2.4",
     "react": "^16.13.1",
