--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,8 @@ variables:
 - group: EPlast
   # Container registry service connection established during pipeline creation
 - name: dockerRegistryServiceConnection
-  value: '5aab2e73-307d-46b2-8421-8ac50de15018'
+  # value: '5aab2e73-307d-46b2-8421-8ac50de15018'
+  value: '88435167-4a39-4ca0-9290-a2ef27d3ff17'
 - name: imageRepository
   value: 'eplastweb'
 - name: containerRegistry
