--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,8 @@ variables:
 - name: tag
   value: '$(Build.BuildId)'
 - name: imagePullSecret
-  value: 'eplast1348122b-auth'
+  # value: 'eplast1348122b-auth'
+  value: 'azdev-sa-3a5f0b-token-rqwl2'
 
   # Agent VM image name
 - name: vmImageName
