--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ variables:
   value: '$(Build.BuildId)'
 - name: imagePullSecret
   # value: 'eplast1348122b-auth'
-  value: 'azdev-sa-3a5f0b-token-rqwl2'
+  value: 'default-token-hz2ss'
 
   # Agent VM image name
 - name: vmImageName
